[package]
name = "pulse-spectralyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
atomic-option = "0.1.2"
cpal = "0.15.3"
egui = { git = "https://github.com/Fabus1184/egui.git/", branch = "feat-plot-lifetime" }
eframe = { git = "https://github.com/Fabus1184/egui.git/", branch = "feat-plot-lifetime" }
egui_plot = { git = "https://github.com/Fabus1184/egui.git/", branch = "feat-plot-lifetime" }
log = "0.4.21"
ringbuffer = "0.15.0"
rustfft = "6.2.0"
simplelog = "0.12.2"
#eframe = "0.27.2"
#egui = "0.27.2"
#egui_plot = "0.27.2"
